# market-data-feed

./: .gitignore  LICENSE  PUBLISHING.md  README.md  demo.py  not_updated.txt  oauth_client_base64.txt  pyproject.toml  test_imports.py  token_pickle_base64.txt
.github/workflows/: docs.yml  publish-bse.yml  publish-mcx.yml  publish-nse.yml  publish-pypi.yml  publish-umbrella.yml  update_data.yml
.lambda_layer/: README.md  build.sh  deploy.md  download_all.py  lambda_function.py  mcx_lambda.py  nse_lambda.py  test_mcx_local.py
customdata/: __init.py__  __init__.py  api.py  drive_client.py
docs/: _config.yml  api-reference.md  bse-indices.md  bse.md  capital-market-indices.md  capital-market-slb.md  capital-market.md  data-catalog.md  data-sources.md  datasets.md  debt-corporate.md  debt-segment.md  debt-trm.md  deploy-testpypi.md  derivatives-commodity.md  derivatives-currency.md  derivatives-equity.md  derivatives-ird.md  egr.md  index.md  installation.md  lambda.md  mcx-spot.md  mcx.md  nse.md  reference.md  usage-cli.md  usage-python-mcx.md  usage-python.md
samples/: README.md
samples/indices/: NIFTY_50_TRI_01-Apr-2026_to_15-Apr-2026.csv  NIFTY_50_price_01-Apr-2026_to_15-Apr-2026.csv
scripts/: download_data.py  update_drive.py  update_local.py  upload_force.py  upload_good_only.py  upload_initial_data.py
